Body overflow fix

--- a/app/stylesheets/home_page/_who_section.sass
+++ b/app/stylesheets/home_page/_who_section.sass
@@ -1,6 +1,5 @@
 @import '../components/election_programs.sass'
-body
-	overflow: hidden
+
 #whoBox
 	.wrapper
 		background-image: linear-gradient(45deg, #FF9D60 0%, #E95C73 100%)
